# Try_make_mcp

./: .env  .gitignore  6a.md  Dockerfile  LICENSE  README.md  README_zh.md  claude_desktop_config.json  find_duplicates.py  index.html  knowledge_qa_100.md  math-time-server.spec  mcp_manager.py  md_converter.spec  plugin.yaml  pyproject.toml  pytest.ini  requirements.txt  review-flow-server.spec  server.json  smithery.yaml  test_app.spec  test_scenario_doc_ai_revision_20251218_165026.md  test_standard.spec  verify_import.py
.github/: FUNDING.yml
cloudflare-worker/: README.md  worker.mjs  wrangler.toml
docs/: 6A测试工作流助手_Merged.md  Everything2MD_Integrated.md  GetInRAGFlow_Merged.md  KnowledgeStaging_Merged.md  Knowledge_Base_Merged.md  MCP_FACTORY_MANUAL.md  MCP_FACTORY_RULES.md  MCP交付规范升级_Merged.md  MCP生产工厂_Merged.md  MD转多格式MCP_Merged.md  PROJECT_CHRONICLE.html  PROJECT_CHRONICLE.md  RAG评估工作流_Merged.md  TestProject_Merged.md  building-first-mcp-server-2026.html  deploy-mcp-cloudflare-workers.html  dockerize-mcp-server.html  index.html  mcp-authentication-security.html  mcp-best-practices-2026.html  mcp-claude-desktop-setup.html  mcp-client-error-handling.html  mcp-client-libraries-2026.html  mcp-cursor-setup.html  mcp-debugging-monitoring.html  mcp-monetization-guide.html  mcp-payment-error-32042.html  mcp-performance-benchmark-2026.html  mcp-registry-publishing-guide.html  mcp-server-patterns.html  mcp-testing-guide.html  mcp-troubleshooting-common-errors.html  mcp-use-cases-2026.html  mcp-vs-tool-calling.html  mcp-vscode-setup.html  rag_flow_mcp_Merged.md  sitemap.xml  stripe-mcp-integration-tutorial.html  tutorial-mcp-factory-quickstart.html  构建MCP服务_Merged.md  (+4 more)
scripts/: debug_env.py  debug_experiment.py  generate_chronicle.py
src/: client_demo.py  review_flow.py  server.py
tests/: golden_dataset.json  test_inference_quality.py  (+4 more)
(+473 files in other folders)
